--- a/.github/workflows/pip-package.yml
+++ b/.github/workflows/pip-package.yml
@@ -34,7 +34,7 @@ jobs:
         python -m pip install pybind11 pytest
     - name: Build
       run: |
-        python -m pip install -e .
+        python -m pip install .
     # - name: Lint with flake8
     #   run: |
     #     # stop the build if there are Python syntax errors or undefined names
