--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,5 @@ version = attr: neworder.__version__
 [flake8]
 ignore = E111, E114, E121, E261
 max-line-length = 160
-per-file-ignores = __init__.py:F401
+per-file-ignores = __init__.py:F401, F403
 exclude = .venv*, untested, .git, __pycache__, .eggs, build
