--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,9 +3,9 @@ name: Python coverage
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
