--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -20,10 +20,15 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-      - name: Conda info
+      - name: Conda setup
         shell: bash -l {0}
         run: |
           conda info
           conda list
           conda create -q -n conda-env python=${{ matrix.python-version }} gxx_linux-64 numpy pandas pybind11 pytest # mpich mpi4py
+      - name: Conda build
+        shell: bash -l {0}
+        run: |
+          conda activate conda-env
+          python -m pip install .
 
