--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -16,6 +16,7 @@ jobs:
         os: ["ubuntu-latest"] #, "macos-latest", "windows-latest"]
         python-version: ["3.9"]
     steps:
+      - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
