--- a/.github/workflows/pip-package.yml
+++ b/.github/workflows/pip-package.yml
@@ -5,7 +5,7 @@ name: Python (pip) build
 
 on:
   push:
-    branches: [ '**' ]
+    branches: [ main ]
     tags: '**'
   pull_request:
     branches: [ main ]
@@ -22,9 +22,9 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: "pip: Python ${{ matrix.python-version }} / ${{ matrix.os }}"
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
