--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,13 +1,13 @@
-cycler==0.11.0
-kiwisolver==1.3.2
-matplotlib==3.4.3
-mpi4py==3.1.1
-neworder==1.0.1
-numpy==1.22.0
-pandas==1.3.4
-Pillow==9.3.0
-pyparsing==2.4.7
-python-dateutil==2.8.2
-pytz==2021.3
-scipy==1.7.1
-six==1.16.0
+cycler>=0.11.0
+kiwisolver>=1.3.2
+matplotlib>=3.4.3
+mpi4py>=3.1.1
+neworder>=1.0.1
+numpy>=1.22.0
+pandas>=1.3.4
+Pillow>=9.3.0
+pyparsing>=2.4.7
+python-dateutil>=2.8.2
+pytz>=2021.3
+scipy>=1.7.1
+six>=1.16.0
