--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,8 @@ theme:
     scheme: default
     primary: blue grey
     accent: red
+  features:
+    - content.code.copy
 
 markdown_extensions:
   - toc:
