--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 # this file is used by readthedocs.io
-mkdocs>=1.2.3
-mkdocs-material>=8.2.5
-mkdocs-macros-plugin>=0.6.4
-mkdocs-material-extensions>=1.0.3
+mkdocs>=1.4.2
+mkdocs-macros-plugin>=0.7.0
+mkdocs-material>=9.0.2
+mkdocs-material-extensions>=1.1.1
+mkdocs-video>=1.3.0
 requests
