--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,13 +1,33 @@
-cycler>=0.11.0
-kiwisolver>=1.3.2
-matplotlib>=3.4.3
-mpi4py>=3.1.1
-neworder>=1.0.1
-numpy>=1.22.0
-pandas>=1.3.4
-Pillow>=9.3.0
-pyparsing>=2.4.7
-python-dateutil>=2.8.2
-pytz>=2021.3
-scipy>=1.7.1
-six>=1.16.0
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+contourpy==1.0.7
+cycler==0.11.0
+Fiona==1.9.3
+fonttools==4.39.3
+geopandas==0.12.2
+idna==3.4
+kiwisolver==1.4.4
+matplotlib==3.7.1
+mpi4py==3.1.4
+munch==2.5.0
+networkx==3.1
+neworder==1.2.1
+numpy==1.24.2
+osmnx==1.3.0
+packaging==23.1
+pandas==2.0.0
+Pillow==9.5.0
+pyparsing==3.0.9
+pyproj==3.5.0
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.28.2
+scipy==1.10.1
+shapely==2.0.1
+six==1.16.0
+tzdata==2023.3
+urllib3==1.26.15
