--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,4 @@ exclude = .venv*, untested, .git, __pycache__, .eggs, build
 
 [mypy]
 disallow_untyped_defs = True
+plugins = numpy.typing.mypy_plugin
