--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,11 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: PyPI
+name: Build and test
 
 on:
   push:
-    branches: [ main ]
     tags: '**'
   pull_request:
     branches: [ main ]
