--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -25,7 +25,7 @@ jobs:
         login: virgesmith
         token: "${{ secrets.REPO_PAT }}"
         # part defaults to patch
-        # part: minor
+        part: major
     - name: Create dist
       run: |
         pip install pybind11 numpy
