--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -2,7 +2,7 @@ name: PyPI release
 
 on:
   push:
-    branches: main
+    branches: post1.2.1
 
 jobs:
   bump-version:
@@ -14,7 +14,7 @@ jobs:
       with:
         persist-credentials: false
     - name: current_version
-      run: echo "current_version=$(grep __version__ neworder/__init__.py | cut -d ' ' -f3 | sed 's/"//g')" >> $GITHUB_ENV
+      run: echo "current_version=$(grep __version__ neworder/__init__.py | cut -d ' ' -d'"' -f2)" >> $GITHUB_ENV
     - name: bump2version-action
       uses: FragileTech/bump-version@v1.0.4
       with:
@@ -25,13 +25,36 @@ jobs:
         login: virgesmith
         token: "${{ secrets.REPO_PAT }}"
         # part defaults to patch
-        part: major
+        part: minor
     - name: Create dist
       run: |
         pip install pybind11 numpy
         python setup.py sdist
-    - name: Publish
-      uses: pypa/gh-action-pypi-publish@release/v1
+    # - name: Publish
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+    #     repository-url: https://test.pypi.org/legacy/
+    - name: new_version
+      run: echo "new_version=$(grep __version__ neworder/__init__.py | cut -d ' ' -d'"' -f2)" >> $GITHUB_ENV
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository-url: https://test.pypi.org/legacy/
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_PAT }}
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+      with:
+        images: |
+          ${{ github.repository }}
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
