--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[bumpversion]
+current_version = 1.4.0
+
 [metadata]
 version = attr: neworder.__version__
 
@@ -9,3 +12,4 @@ exclude = .venv*, untested, .git, __pycache__, .eggs, build
 
 [mypy]
 disallow_untyped_defs = True
+plugins = numpy.typing.mypy_plugin
