--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,8 @@ dependencies = [
   "pandas>=1.5.0",
   "pandas-stubs",
   "scipy>=1.9.3",
-  "mpi4py>=3.0.3",
   "matplotlib>=3.6.2"
 ]
-
-  # install_requires=['pandas>=1.0.5', 'pandas-stubs', 'scipy'],
-  # setup_requires=['pybind11>=2.5.0', 'pytest-runner', 'numpy>=1.19.1'],
-  # tests_require=['pytest', 'mpi4py>=3.0.3'],
 
 
 [project.optional-dependencies]
@@ -43,6 +38,10 @@ geospatial = [
   "osmnx>=1.3.0",
   "geopandas>=0.12.2",
   "shapely>=2.0.0"
+]
+
+parallel = [
+  "mpi4py>=3.0.3"
 ]
 
 dev = [
