--- a/.github/workflows/mpi-test.yml
+++ b/.github/workflows/mpi-test.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y mpich libmpich-dev
       - name: Build
         run: |
-          python -m pip install .[parallel]
+          python -m pip install .[parallel] pytest
       - name: Test with pytest
         run: |
           mpiexec -n 2 python -m pytest
