--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,12 @@ dev = [
   "pybind11>=2.10.3",
   "pytest>=7.1.3",
   "mypy>=1.5.0",
-  "mypy-extensions>=1.0.0"
+  "mypy-extensions>=1.0.0",
+  "mkdocs>=1.4.2",
+  "mkdocs-macros-plugin>=0.7.0",
+  "mkdocs-material>=9.0.2",
+  "mkdocs-material-extensions>=1.1.1",
+  "mkdocs-video>=1.3.0"
 ]
 
 
