--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,10 +29,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pybind11 pytest
     - name: Build
       run: |
-        python -m pip install .
+        python -m pip install .[geospatial]
     # - name: Lint with flake8
     #   run: |
     #     # stop the build if there are Python syntax errors or undefined names
