--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ description = "A dynamic microsimulation framework"
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
-    "Programming Language :: Python :: 3.10"
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
