--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,69 @@ requires = [
 
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "neworder"
+version = "1.3.999"
+authors = [
+  { name="Andrew Smith", email="andrew@friarswood.net" },
+]
+license = {file = "LICENCE.md"}
+description = "A dynamic microsimulation framework"
+readme = "README.md"
+requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+dependencies = [
+  "pandas>=1.5.0",
+  "pandas-stubs",
+  "scipy>=1.9.3",
+  "matplotlib>=3.6.2"
+]
+
+
+[project.optional-dependencies]
+geospatial = [
+  "networkx>3.0",
+  "osmnx>=1.3.0",
+  "geopandas>=0.12.2",
+  "shapely>=2.0.0"
+]
+
+parallel = [
+  "mpi4py>=3.0.3"
+]
+
+dev = [
+  "pybind11>=2.10.3",
+  "pytest>=7.1.3",
+  "mypy>=1.5.0",
+  "mypy-extensions>=1.0.0",
+  "ruff",
+  "mkdocs>=1.4.2",
+  "mkdocs-macros-plugin>=0.7.0",
+  "mkdocs-material>=9.0.2",
+  "mkdocs-material-extensions>=1.1.1",
+  "mkdocs-video>=1.3.0"
+]
+
+
+[project.urls]
+"Homepage" = "https://github.com/pypa/sampleproject"
+"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = [
     "test"
 ]
+
+[tool.ruff]
+select = ["E", "F"]
+ignore = ["E501"]
+
+[tool.ruff.per-file-ignores]
+"**/__init__.py" = ["F401", "F403"]
