--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 # this file is used by readthedocs.io
-mkdocs>=1.4.2
-mkdocs-macros-plugin>=0.7.0
-mkdocs-material>=9.0.2
-mkdocs-material-extensions>=1.1.1
-mkdocs-video>=1.3.0
-requests
+mkdocs==1.5.2
+mkdocs-macros-plugin==1.0.4
+mkdocs-material==9.2.5
+mkdocs-material-extensions==1.1.1
+mkdocs-video==1.5.0
+requests==2.31.0
