--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,6 @@
-# this file is used by readthedocs.io
+# DO NOT EDIT
+# auto-generated @ 2023-08-29 20:36:18.318621 by docs/macros.py::write_requirements()
+# required by readthedocs.io
 mkdocs==1.5.2
 mkdocs-macros-plugin==1.0.4
 mkdocs-material==9.2.5
