--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,15 +15,26 @@ theme:
     accent: red
   features:
     - content.code.copy
+    - content.code.annotate
 
 markdown_extensions:
   - toc:
       permalink: "¶"
   - admonition
   - pymdownx.highlight
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.arithmatex:
       generic: true
+  - footnotes
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
 
 extra_javascript:
   - js/config.js
