--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,9 +70,9 @@ testpaths = [
     "test"
 ]
 
-[tool.ruff]
-select = ["E", "F"]
+[tool.ruff.lint]
+select = ["E", "F", "I"]
 ignore = ["E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401", "F403"]
