--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
@@ -60,8 +61,8 @@ dev = [
 
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://neworder.readthedocs.io/"
+"Bug Tracker" = "https://github.com/virgesmith/neworder/issues"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -69,9 +70,9 @@ testpaths = [
     "test"
 ]
 
-[tool.ruff]
-select = ["E", "F"]
+[tool.ruff.lint]
+select = ["E", "F", "I"]
 ignore = ["E501"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401", "F403"]
