--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.11" ]
+        python-version: [ "3.12" ]
     steps:
     - uses: actions/checkout@v4
     - name: "pip: Python ${{ matrix.python-version }} coverage"
@@ -27,7 +27,7 @@ jobs:
         python -m pip install pybind11 pytest
     - name: Build
       run: |
-        CFLAGS=-coverage python -m pip install .
+        CXXFLAGS=-coverage python -m pip install .
     - name: Test
       run: |
         python -m pytest
