--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,6 +17,8 @@ jobs:
         python-version: [ "3.12" ]
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: "pip: Python ${{ matrix.python-version }} coverage"
       uses: actions/setup-python@v5
       with:
