--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   bump-version:
     name: Bump package version
-    if: "!contains(github.event.head_commit.message, 'Bump version')"
+    if: false #"!contains(github.event.head_commit.message, 'Bump version')"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
