--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "neworder"
-version = "1.4.2"
+version = "1.4.3"
 authors = [
   { name="Andrew Smith", email="andrew@friarswood.net" },
 ]
@@ -34,10 +34,10 @@ dependencies = [
 ]
 
 
-[project.optional-dependencies]
+[dependency-groups]
 geospatial = [
   "networkx>3.0",
-  "osmnx>=1.3.0",
+  "osmnx>=2.0.0",
   "geopandas>=0.12.2",
   "shapely>=2.0.0"
 ]
@@ -47,17 +47,17 @@ parallel = [
 ]
 
 dev = [
-  "build>=1.2.2.post1",
   "pybind11>=2.10.3",
   "pytest>=7.1.3",
   "mypy>=1.5.0",
   "mypy-extensions>=1.0.0",
   "ruff",
-  "mkdocs>=1.4.2",
-  "mkdocs-macros-plugin>=0.7.0",
-  "mkdocs-material>=9.0.2",
-  "mkdocs-material-extensions>=1.1.1",
-  "mkdocs-video>=1.3.0"
+  "mkdocs>=1.6.1",
+  "mkdocs-macros-plugin>=1.3.7",
+  "mkdocs-material>=9.6.14",
+  "mkdocs-material-extensions>=1.3.1",
+  "mkdocs-video>=1.5.0",
+  "requests>=2.32.4"
 ]
 
 
@@ -71,9 +71,16 @@ testpaths = [
     "test"
 ]
 
+[tool.ruff]
+line-length = 120
+
 [tool.ruff.lint]
 select = ["E", "F", "I"]
 ignore = ["E501"]
 
 [tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["F401", "F403"]
+
+[tool.mypy]
+disallow_untyped_defs = "true"
+plugins = "numpy.typing.mypy_plugin"
