--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,20 +22,16 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v4
-    - name: "pip: Python ${{ matrix.python-version }} / ${{ matrix.os }}"
-      uses: actions/setup-python@v5
+    - name: Install
+      uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
     - name: Build
+      run: uv sync --extra geospatial --dev
+    - name: Lint
       run: |
-        python -m pip install .[geospatial,dev]
-    - name: Lint with ruff
+        uv run ruff check
+        uv run mypy neworder
+    - name: Test
       run: |
-        ruff check
-        mypy neworder
-    - name: Test with pytest
-      run: |
-        python -m pytest
+        uv run pytest
