--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,18 +33,7 @@ dependencies = [
   "matplotlib>=3.6.2"
 ]
 
-[project.optional-dependencies]
-geospatial = [
-  "networkx>3.0",
-  "osmnx>=2.0.0",
-  "geopandas>=0.12.2",
-  "shapely>=2.0.0"
-]
-
-parallel = [
-  "mpi4py>=3.0.3"
-]
-
+[dependency-groups]
 dev = [
   "pybind11>=2.10.3",
   "pytest>=7.1.3",
@@ -59,6 +48,19 @@ dev = [
   "requests>=2.32.4"
 ]
 
+[project.optional-dependencies]
+geospatial = [
+  "networkx>3.0",
+  "osmnx>=2.0.0",
+  "geopandas>=0.12.2",
+  "shapely>=2.0.0"
+]
+
+parallel = [
+  "mpi4py>=3.0.3"
+]
+
+
 
 [project.urls]
 "Homepage" = "https://neworder.readthedocs.io/"
@@ -68,6 +70,9 @@ dev = [
 minversion = "6.0"
 testpaths = [
     "test"
+]
+filterwarnings = [
+    "ignore:neworder installed in serial mode:RuntimeWarning",
 ]
 
 [tool.ruff]
