--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dev = [
   "mkdocs-material-extensions>=1.3.1",
   "mkdocs-video>=1.5.0",
   "requests>=2.32.4",
+  "types-requests",
 ]
 
 [project.optional-dependencies]
