--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
 
 [project.optional-dependencies]
 geospatial = [
+  "pyogrio>=0.12.0",
   "networkx>3.0",
   "osmnx>=2.0.0",
   "geopandas>=0.12.2",
