--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "neworder"
-version = "1.4.3"
+version = "1.4.4"
 authors = [
   { name="Andrew Smith", email="andrew@friarswood.net" },
 ]
 license = {file = "LICENCE.md"}
 description = "A dynamic microsimulation framework"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 classifiers = [
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
@@ -45,11 +45,13 @@ dev = [
   "mkdocs-material>=9.6.14",
   "mkdocs-material-extensions>=1.3.1",
   "mkdocs-video>=1.5.0",
-  "requests>=2.32.4"
+  "requests>=2.32.4",
+  "types-requests",
 ]
 
 [project.optional-dependencies]
 geospatial = [
+  "pyogrio>=0.12.0",
   "networkx>3.0",
   "osmnx>=2.0.0",
   "geopandas>=0.12.2",
@@ -79,7 +81,7 @@ filterwarnings = [
 line-length = 120
 
 [tool.ruff.lint]
-select = ["E", "F", "I"]
+select = ["B", "C", "E", "F", "I"]
 ignore = ["E501"]
 
 [tool.ruff.lint.per-file-ignores]
