--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -9,6 +9,7 @@ on:
       - main
 
 jobs:
+
   deploy:
     name: Publish to PyPI
     runs-on: ubuntu-latest
@@ -41,3 +42,21 @@ jobs:
           password: ${{ secrets.PYPI_API_TOKEN }}
           # You can specify a different repository if needed (e.g., TestPyPI for testing)
           # repository-url: https://test.pypi.org/legacy/
+      - name: zip examples
+        run: |
+          zip -r examples.zip examples/
+          tar czfv examples.tgz examples/
+      - name: upload zip artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: examples.zip
+          path: examples.zip
+          # retention-days: 14
+      - name: upload tgz artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: examples.tgz
+          path: examples.tgz
+          # retention-days: 14
+
+
