--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "neworder"
-version = "1.4.4"
+version = "1.5.0"
 authors = [
   { name="Andrew Smith", email="andrew@friarswood.net" },
 ]
-license = {file = "LICENCE.md"}
+license = "MIT"
+license-files = ["LICENCE.md"]
 description = "A dynamic microsimulation framework"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -23,7 +24,6 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dependencies = [
@@ -40,6 +40,7 @@ dev = [
   "mypy>=1.5.0",
   "mypy-extensions>=1.0.0",
   "ruff",
+  "click<8.3",  # bug prevents mkdocs auto-refreshing
   "mkdocs>=1.6.1",
   "mkdocs-macros-plugin>=1.3.7",
   "mkdocs-material>=9.6.14",
@@ -47,6 +48,7 @@ dev = [
   "mkdocs-video>=1.5.0",
   "requests>=2.32.4",
   "types-requests",
+  "pybind11-stubgen>=2.5.5",
 ]
 
 [project.optional-dependencies]
@@ -89,4 +91,3 @@ ignore = ["E501"]
 
 [tool.mypy]
 disallow_untyped_defs = "true"
-plugins = "numpy.typing.mypy_plugin"
