--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
   "requests>=2.32.4",
   "types-requests",
   "pybind11-stubgen>=2.5.5",
+  "types-python-dateutil>=2.9.0.20260124",
 ]
 
 [project.optional-dependencies]
